--- a/mean/src/client/lms/directives/course-view-simple/course-view.client.view.html
+++ b/mean/src/client/lms/directives/course-view-simple/course-view.client.view.html
@@ -20,6 +20,7 @@
 .infoCourse>.title {
 	font-size: 18px;
 	margin-bottom: 5px;
+  color: #2196f3!important;
 }
 
 .infoCourse>.introA {
@@ -66,21 +67,23 @@
 	.infoCourse>.introA {
 		display: none;
 	}
+  .uk-width-1-1.hierarchical_show {
+    height:auto!important;
+  }
 }
 </style>
 <div class="md-card search-course-content" style="box-shadow: none;">
-	<div class="md-card-content large-padding">
+	<div class="md-card-content" id="courses-list-search">
 		<div class="uk-grid blog_article uk-grid-divider" data-uk-grid-margin>
 			<div class="uk-width-1-1 hierarchical_show"
 				ng-repeat="itemCourse in course | orderBy:sort"
 				data-uk-grid="{gutter: 20}" hierarchical-show
-				style="margin-bottom: 20px;">
+				style="margin-bottom: 20px;margin-top: 0;">
 				<a class="link-course-search"
 					ui-sref="workspace.lms.courses.join.intro({ courseId: itemCourse._id,editionId:edition._id })">
 					<div class="uk-grid uk-grid-small" style="width: 100%;">
 						<div class="uk-width-1-4" style="overflow: auto;">
-							<img class="img_thumb" style="border-radius: 5px; width: 90%;"
-								src="{{itemCourse.logoURL}}" />
+							<img class="img_thumb" src="{{itemCourse.logoURL}}" />
 						</div>
 						<div class="uk-width-3-4">
 							<div class="uk-grid uk-grid-small">
