--- a/mean/src/client/core/directives/program-card/program.card.client.view.html
+++ b/mean/src/client/core/directives/program-card/program.card.client.view.html
@@ -18,7 +18,7 @@
             </div>
             <div class="uk-width-large-1-1">
                 <h3>{{'MODEL.PROGRAM.COURSE'| translate}}</h3>
-                <div class="uk-grid uk-grid-medium" style="padding: 5px 30px;">
+                <div class="uk-grid uk-grid-medium">
                     <div ng-repeat="course in program.courses"
                          class="uk-width-small-1-1 uk-width-medium-1-3 uk-width-large-1-5 uk-margin-bottom hierarchical_show"
                          id="course_list" hierarchical-show>
@@ -40,8 +40,7 @@
                                             </div>
 
                                             <div class="level-date-home course-info">
-                                                <span class="date">{{course.startDate | date :'dd-MM-yyyy'}}</span>&nbsp;&nbsp;
-                                                <span class="capitalize">{{course.level}}</span>
+                                                <span>{{course.startDate | date :'dd-MM-yyyy'}}</span>
                                             </div>
                                         </div>
                                     </div>
