--- a/mean/src/client/lms/directives/feedback-form/feedback-form.client.view.html
+++ b/mean/src/client/lms/directives/feedback-form/feedback-form.client.view.html
@@ -3,7 +3,7 @@
 	<div class="uk-grid" data-uk-grid-margin>
 		<div class="uk-width-1-1">
 			<div id="feedback_text">
-				<label for=""feedback_text"">{{'MODEL.FEEDBACK.RESPONSE'|translate}}</label>
+				<label for="feedback_text">{{'MODEL.FEEDBACK.RESPONSE'|translate}}</label>
 				<textarea ui-tinymce="tinymce_options"
 				ng-model="feedback.response" cols="30" rows="4"></textarea>
 			</div>
