--- a/mean/src/client/lms/directives/questions/point-click-question/point-click-question.client.view.html
+++ b/mean/src/client/lms/directives/questions/point-click-question/point-click-question.client.view.html
@@ -34,7 +34,7 @@
 				ng-model="question.description" cols="30" rows="4"></textarea>
 		</div>
 		<div class="uk-width-8-10 uk-text-center uk-margin">
-			<svg " ng-mousemove="mouseMove($event)"
+			<svg ng-mousemove="mouseMove($event)"
 				xmlns="http://www.w3.org/2000/svg"
 				xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve"
 				width="320" height="320">
