fix conflix home html

--- a/mean/src/client/core/directives/program-card/program.card.client.view.html
+++ b/mean/src/client/core/directives/program-card/program.card.client.view.html
@@ -6,7 +6,7 @@
                     <!--{{'MODEL.PROGRAM.CODE'|translate}}: {{program.code}}-->
                     <a ui-sref="workspace.lms.programs.join.intro({ programId: program._id})">
                         <h3 class="text-title-program uk-article-title uk-text-primary title"
-                        style="text-transform: capitalize; font-weight: 500;">{{program.name}}</h3>
+                        style="text-transform: capitalize; font-weight: 500;" id="courseofprogram">{{program.name}}</h3>
                     <!--<h3>{{"MODEL.PROGRAM.SUMMARY" |translate}}</h3>-->
                     <!--<p class="uk-article-lead summary">{{program.summary | truncateWord: 12}}</p>-->
                     <!--<hr class="uk-article-divider">-->
