--- a/mean/src/client/lms/directives/select-audio/audio-selector.client.view.html
+++ b/mean/src/client/lms/directives/select-audio/audio-selector.client.view.html
@@ -6,7 +6,7 @@
 				id="video_player">
 				<div class="uk-grid">
 					<div class="uk-width-1-2 uk-container-center">
-						<video id="selectorVAudio" src="{{object.audioURL | trust}}"
+						<video id="selectorVAudio" src="{{object.audioURL }}"
 							controls
 							></video>
 					</div>
