--- a/mean/src/client/lms/directives/select-video/video-selector.client.view.html
+++ b/mean/src/client/lms/directives/select-video/video-selector.client.view.html
@@ -6,7 +6,7 @@
 				id="video_player">
 				<div class="uk-grid">
 					<div class="uk-width-1-2 uk-container-center">
-						<video id="selectorVideo" src="{{object.videoURL | trust}}"
+						<video id="selectorVideo" src="{{object.videoURL }}"
 							video-autoplay data-attr-autoplay={{videoAttr.autoplay}}
 							video-control data-attr-control={{videoAttr.controls}}
 							video-muted data-attr-muted={{videoAttr.muted}}
